work on customer appointments, test a gemfile for display stars

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,5 +6,8 @@
     <p>
       <%= link_to 'prendre un rdv', new_appointment_path, class: 'btn btn-warning' %>
     </p>
+    <p>
+      <%= link_to 'voir mes rdv', my_appointments_path, class: 'btn btn-warning' %>
+    </p>
   </div>
 </div>
