--- a/app/views/appointments/my_appointments.html.erb
+++ b/app/views/appointments/my_appointments.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h1>My appointments</h1>
+    <h2>Mes rendez-vous</h2>
 
     <% @appointments.each do |appointment| %>
       <div class="col-xs-12 col-sm-6 col-md-4">
@@ -10,7 +10,7 @@
             <%= appointment.start_date.strftime('%d %b %y') %>
             <i class="far fa-clock"></i>
             <%= appointment.start_date.strftime('%H:%M') %>
-            >
+            <i class="fas fa-caret-right"></i>
             <%= appointment.end_date.strftime('%H:%M') %>
           </p>
           <p>
